# renkler

./: .env.example  .env.netlify  .env.test  .gitignore  .npmrc  ACCESSIBILITY_DOCUMENTATION.md  ACCESSIBILITY_IMPLEMENTATION.md  API_INTEGRATION_README.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  Dockerfile  I18N_IMPLEMENTATION.md  LICENSE  MOBILE_OPTIMIZATION_GUIDE.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  README_ADMIN_SETUP.md  SECURITY.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  netlify.toml  nginx.conf  package-lock.json  package.json
docs/: ACCESSIBILITY.md  API_QUICK_REFERENCE.md  API_REFERENCE.md  COLOR_ESSENTIALS.md  COLOR_THEORY_GUIDE.md  COMPREHENSIVE_USER_GUIDE.md  DEVELOPER_GUIDE.md  ESSENTIAL_FEATURES.md  GETTING_STARTED.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  QUICK_START.md  README.md  ROOM_DESIGN_EXAMPLES.md  ROOM_GUIDE.md  TROUBLESHOOTING_FAQ.md  TUTORIALS.md  USER_GUIDE.md
mcp-n8n-integration/: .env.example  INSTALLATION_VERIFICATION.md  INTEGRATION_SUMMARY.md  README.md  claude-desktop-config.json  pyproject.toml  requirements.txt  setup.py
mcp-n8n-integration/docs/: DEPLOYMENT.md
mcp-n8n-integration/sanzo_n8n_mcp/: __init__.py  models.py  n8n_client.py  server.py  workflow_manager.py
mcp-n8n-integration/scripts/: quick-start.bat  quick-start.sh
mcp-n8n-integration/tests/: __init__.py  conftest.py  test_integration.py  test_mcp_server.py  test_n8n_client.py  test_workflow_manager.py
monitoring/: README.md  alert_rules.yml  prometheus.yml
public/: README.md  accessibility.css  customer.html  dashboard.html  demo.html  index.html  manifest.json  offline.html  styles.css  sw.js
scripts/: create-admin.js  create-schema.js  debug-connection.js  deploy.sh  health-check.sh  monitoring-setup.sh  netlify-deploy.sh  security-check.js  test-api.js  test-connection.js
src/: index.js  monitoring.js
(+88 files in other folders)
